# plasma-dbus-hid-sender

./: README.md  companion-sites.md  gdbus-debugging.md  pyproject.toml
plasma_dbus_hid_sender/: KWin.py  VirtualDesktopManager.py  cp-signal-read.py  devel.py
