[tool.poetry]
name = "plasma-dbus-hid-sender"
version = "0.1.0"
description = ""
authors = ["Tyler Pate <tpate@redhat.com>"]
readme = "README.md"
packages = [{include = "plasma_dbus_hid_sender"}]

[tool.poetry.dependencies]
python = "^3.9"
jeepney = "^0.8.0"
pyusb = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
